# Roblox-Account-Manager

./: .gitignore  CLAUDE.md  PORTING_LOG.md  PORTING_PLAYBOOK.md  PORTING_STRATEGY.md  README.md  THEME_SYSTEM.md  create_release.ps1  crowdin.yml  greptile.json  index.html  package.json
.github/: RELEASE_FLOW.md  pull_request_template.md
.github/scripts/: generate-update-manifest.mjs  prepare-release.mjs
.github/workflows/: ci.yml  crowdin-sync.yml  release-v4.yml  sync-release-labels.yml
RBX Alt Manager/: AccountManager.Designer.cs  AccountManager.cs
RBX Alt Manager/Classes/: Account.cs
RBX Alt Manager/Properties/: AssemblyInfo.cs
scripts/: pr-flow.ps1
scripts/benchmarks/: .gitignore  README.md  config.example.json  run-version-benchmarks.ps1
scripts/i18n/: extract-keys.ts
src/: App.tsx  featureFlags.ts  fontPresets.ts  index.css  store.tsx  theme.ts  themeFonts.ts  types.ts  updaterChannels.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: browser.rs  lib.rs  main.rs
src-tauri/src/api/: auth.rs  batch.rs  mod.rs  roblox.rs  server.rs
src-tauri/src/api/roblox/: avatar_games.rs  economy.rs  http.rs  private_links.rs  social_presence.rs  thumbnails.rs  users.rs
src-tauri/src/api/server/: handlers_basic.rs  handlers_edit.rs  handlers_launch.rs  helpers.rs  launch_patch.rs  middleware.rs  query.rs  route_wrappers.rs  runtime.rs  state.rs
src-tauri/src/commands/: account_api.rs  account_helpers.rs  botting.rs  image_cache.rs  launch.rs  launch_shared.rs  services.rs  updater.rs  watcher.rs
src-tauri/src/data/: accounts.rs  crypto.rs  mod.rs  scripts.rs  settings.rs
src-tauri/src/data/accounts/: commands.rs  model.rs  store.rs
src-tauri/src/data/settings/: commands.rs  ini.rs  paths.rs  presets.rs  store.rs  theme.rs
src-tauri/src/nexus/: websocket.rs
src-tauri/src/nexus/websocket/: connection.rs  core.rs  server_impl.rs
src-tauri/src/platform/: macos.rs  windows.rs
src-tauri/src/platform/macos/: client_settings.rs  core.rs  launch.rs  logs.rs  tracker.rs
src-tauri/src/platform/windows/: client_settings.rs  core.rs  launch.rs  process.rs  tracker.rs  windowing.rs
src-tauri/tests/: security_regression_scripts_store.rs
src/components/accounts/: AccountChip.tsx  AccountList.tsx  AccountRow.tsx  DetailSidebar.tsx  GroupSection.tsx  MultiSelectSidebar.tsx  SidebarSection.tsx  SingleSelectSidebar.tsx
src/hooks/: useJoinOnlineWarning.ts  useModalClose.ts  usePrompt.tsx  useSettings.ts
src/i18n/: index.ts  text.ts
src/scripting/: security.ts  types.ts  workerSource.ts
(+57 files in other folders)
