[package]
name = "roblox-account-manager"
version = "4.0.0"
edition = "2021"

[lib]
name = "roblox_account_manager_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = ["nexus", "webserver"]
nexus = ["dep:futures-util", "dep:tokio-tungstenite"]
webserver = ["dep:axum"]

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
sodiumoxide = "0.2"
reqwest = { version = "0.12", features = ["cookies", "json"] }
tokio = { version = "1", features = ["full"] }
urlencoding = "2"
cookie = "0.18"
axum = { version = "0.8", optional = true }
tokio-tungstenite = { version = "0.26", optional = true }
futures-util = { version = "0.3", optional = true }
tauri-plugin-single-instance = "2"
tauri-plugin-autostart = "2"
tauri-plugin-window-state = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
zip = "0.6.6"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Cryptography",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Registry",
    "Win32_System_Memory",
    "Win32_UI_WindowsAndMessaging",
] }
